--- a/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
+++ b/templatedjango/apptemplate/templates/pedidos/listado_pedidos.html
@@ -70,53 +70,47 @@
                                                     
                                                     <div class="table-responsive">
                                                         <table id="example"
-                                                        class="tablita table  table-hover table-bordered  display nowrap"
-                                                        cellspacing="0" width="100%">
-                                                        <thead>
-                                                            <tr style="color: #A3A6B4;">
-                                                                <th>Categoría</th>
-                                                                <th>Producto</th>
-                                                                <th>Cantidad</th>
-                                                                <th>Precio</th>
-                                                                <th>Sub Total</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            
-                                                            {% for mostrar_detalles in detalles_pedidos reversed %}
-                                                                {% if mostrar_detalles.id_pedido.id == mostrar_pedidos.id %}
-                                                                    <tr>
-                                                                        
-                                                                        <td>{{mostrar_detalles.id_producto.id_nombre_producto.categoria}}</td>
-                                                                        <td>{{mostrar_detalles.id_producto.id_nombre_producto.nombre_productos}}</td>
-                                                                        <td>{{mostrar_detalles.cantidad}}</td>
-                                                                        <td>{{mostrar_detalles.precio}}</td>
-                                                                        <td>{{mostrar_detalles.subtotal_producto}}</td>
-                                    
-                                                                        
-                                                                    </tr>
-                                                                    
-                                                                {% endif %}
-                                                            
-                                                            {% endfor %}
+                                                            class="tablita table  table-hover table-bordered  display nowrap"
+                                                            cellspacing="0" width="100%">
+                                                            <thead>
+                                                                <tr style="color: #A3A6B4;">
+                                                                    <th>Categoría</th>
+                                                                    <th>Producto</th>
+                                                                    <th>Cantidad</th>
+                                                                    <th>Precio</th>
+                                                                    <th>Sub Total</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
                                                                 
+                                                                {% for mostrar_detalles in detalles_pedidos reversed %}
+                                                                    {% if mostrar_detalles.id_pedido.id == mostrar_pedidos.id %}
+                                                                        <tr>
+                                                                            
+                                                                            <td>{{mostrar_detalles.id_producto.id_nombre_producto.categoria}}</td>
+                                                                            <td>{{mostrar_detalles.id_producto.id_nombre_producto.nombre_productos}}</td>
+                                                                            <td>{{mostrar_detalles.cantidad}}</td>
+                                                                            <td>{{mostrar_detalles.precio}}</td>
+                                                                            <td>{{mostrar_detalles.subtotal_producto}}</td>
+                                        
+                                                                            
+                                                                        </tr>
+                                                                        
+                                                                    {% endif %}
+                                                                
+                                                                {% endfor %}
 
-                                                                    
-
-
-
-
-                                                                </tbody>
-                                                                <tfoot>
-                                                                    <tr style="color: #A3A6B4;">
-                                                                        <th>Categoría</th>
-                                                                        <th>Producto</th>
-                                                                        <th>Cantidad</th>
-                                                                        <th>Precio</th>
-                                                                        <th>Sub Total</th>
-                                                                    </tr>
-                                                                </tfoot>
-                                                            </table>
+                                                            </tbody>
+                                                            <tfoot>
+                                                                <tr style="color: #A3A6B4;">
+                                                                    <th>Categoría</th>
+                                                                    <th>Producto</th>
+                                                                    <th>Cantidad</th>
+                                                                    <th>Precio</th>
+                                                                    <th>Sub Total</th>
+                                                                </tr>
+                                                            </tfoot>
+                                                        </table>
 
                                                         </div>
 
@@ -163,13 +157,13 @@
 
                                                         <div class="form-group">
                                                             <label for="total_compra">Monto Total del Pedido:</label>
-                                                            <input type="text" readonly class="form-control" id="cantidad_total" value="{{mostrar_pedidos.precio_total}}">
+                                                            <input type="text" readonly class="form-control" value="{{mostrar_pedidos.precio_total}}">
                                                         </div>
 
                                                         <div class="Fecha">
                                                             <div class="form-group">
                                                                 <label for="fecha_pedido">Fecha de Acabado:</label>
-                                                                <input type="date" class="form-control" id="fecha_parcial{{mostrar_pedidos}}"
+                                                                <input type="date" class="form-control" id="fecha_parcial{{mostrar_pedidos.id}}"
                                                                     placeholder="Fecha de Inicio">
                                                             </div>
                                                         </div>
@@ -187,7 +181,7 @@
                                                             // document.write(today);
 
 
-                                                            fecha_parcial = document.getElementById('fecha_parcial{{mostrar_pedidos}}');
+                                                            fecha_parcial = document.getElementById('fecha_parcial{{mostrar_pedidos.id}}');
 
                                                             // fecha_utc = date.toUTCString()
                                                             fecha_parcial.value = date;
@@ -195,16 +189,10 @@
                                                             fecha_parcial.innerHTML = date;
 
 
-                                                            console.log(date)
+                                                            // console.log(date)
 
 
-                                                            // en esta funcion se cambia el vlor de la fecha al input oculto ara poer enviarlo al servidor
-                                                            function cambio() {
-                                                                fecha = document.getElementById('fecha')
-                                                                fecha_parcial = document.getElementById('fecha_parcial');
-                                                                fecha.value = fecha_parcial.value;
-
-                                                            }
+                                                            
                                                         </script>
 
 
@@ -215,10 +203,33 @@
 
 
                                             </div>
+                                            <form action="listado_pedidos" id="form_finalizar_pedido{{mostrar_pedidos.id}}" method="post">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="id_pedido" value="{{mostrar_pedidos.id}}">
+                                                <input type="hidden" id="fecha_finalizar_pedido{{mostrar_pedidos.id}}" name="fecha_finalizar_pedido" value="">
+                                                <input type="hidden" name="finalizar_pedido" value="finalizar_pedido">
+                                                  
+                                            </form>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-outline-danger"
                                                     data-dismiss="modal">Cancelar</button>
-                                                <button type="submit" class="btn btn-outline-success">Finalizar Pedido</button>
+                                                <button type="button" id="finalizar_pedido{{mostrar_pedidos.id}}" class="btn btn-outline-success">Finalizar Pedido</button>
+
+                                                <script>
+
+                                                    
+                                                    var finalizar_pedido{{mostrar_pedidos.id}} = document.getElementById('finalizar_pedido{{mostrar_pedidos.id}}');
+                                                    var form_finalizar_pedido{{mostrar_pedidos.id}} = document.getElementById('form_finalizar_pedido{{mostrar_pedidos.id}}');
+                                                    var fecha{{mostrar_pedidos.id}} = document.getElementById('fecha_finalizar_pedido{{mostrar_pedidos.id}}')
+                                                    var fecha_parcial{{mostrar_pedidos.id}} = document.getElementById('fecha_parcial{{mostrar_pedidos.id}}');
+                                                    
+                                                    finalizar_pedido{{mostrar_pedidos.id}}.addEventListener('click',function(){
+                                                        
+                                                        fecha{{mostrar_pedidos.id}}.value = fecha_parcial{{mostrar_pedidos.id}}.value;
+                                                        form_finalizar_pedido{{mostrar_pedidos.id}}.submit();
+                                                        // console.log(document.getElementById('fecha_finalizar_pedido{{mostrar_pedidos.id}}').value)
+                                                    });
+                                                </script>
                                             </div>
                                         </div>
                                     </div>
