--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -160,7 +160,7 @@
               </i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="gestionar_usuario">Gestionar Usuario</a>
+              <a class="dropdown-item" href="backup">Back-Up del Sistema</a>
               
               <a class="dropdown-item" target="_blank" href="{% static '/assets/userManual/GitCheatSheet.pdf' %}">Manual de Usario</a>
               <a class="dropdown-item" href="auditoria">Auditoría</a>
