Agregando manual de usuario

--- a/templatedjango/apptemplate/templates/auditoria/auditoria.html
+++ b/templatedjango/apptemplate/templates/auditoria/auditoria.html
@@ -36,7 +36,11 @@
                 <tbody>
                     <tr class="small">
                         <td >2020-02-04</td>
-                        <td>Se edito la tabla bla bla</td>
+                        <td>Se edito el precio de una Tuna Amarilla de 5.000 a 10.000</td>
+                    </tr>
+                    <tr class="small">
+                        <td >2020-02-17</td>
+                        <td>Se borro el pedido de la fecha 2020-02-14 </td>
                     </tr>
 
                 </tbody>
