--- a/templatedjango/apptemplate/templates/auditoria/auditoria.html
+++ b/templatedjango/apptemplate/templates/auditoria/auditoria.html
@@ -34,11 +34,18 @@
                         </tr>
                     </thead>
                     <tbody>
+
+                        {% for mostrar_auditoria in auditoria %}
+                            
+                            <tr class="small">
+
+                                <td> {{mostrar_auditoria.fecha_auditoria}} </td>
+                                <td> {{mostrar_auditoria.accion_realizada}} </td>
+
+                            </tr>
+
+                        {% endfor %}
                         
-                        <tr class="small">
-                            <td >2020-02-04</td>
-                            <td>Se edito el precio de una Tuna Amarilla de 5.000 a 10.000</td>
-                        </tr>
 
                     </tbody>
                     <tfoot>
