--- a/templatedjango/apptemplate/templates/produccion/listado_produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/listado_produccion.html
@@ -54,7 +54,7 @@
 
                                                 <div class="form-group">
                                                     <label for="fecha_produccion">Fecha de Inicio:</label>
-                                                    <input type="date" readonly class="form-control" id="fecha" value="{{mostrar_produccion.fecha_produccion}}">
+                                                    <input type="" readonly class="form-control" id="fecha" value="{{mostrar_produccion.fecha_produccion}}">
                                                 </div>
 
 
@@ -208,7 +208,7 @@
                                                             
                                                             {% if mostrar_produccion.estado_produccion == "Terminado" %}
 
-                                                                <input type="date" class="form-control" value="{{mostrar_produccion.fecha_acabado}}" readonly>
+                                                                <input type="" class="form-control" value="{{mostrar_produccion.fecha_acabado}}" readonly>
                                                             {% else %}
                                                                 <input type="date" class="form-control" id="fecha_parcial{{mostrar_produccion.id}}">
                                                             {% endif %}
