--- a/templatedjango/apptemplate/templates/clientes/clientes.html
+++ b/templatedjango/apptemplate/templates/clientes/clientes.html
@@ -102,104 +102,111 @@
 
                     {% for mostrar in clientes %}
 
-                    <tr class="small">
-                        <td id="select{{mostrar.id}}">{{mostrar.nombre_cliente}}</td>
-                        <td>{{mostrar.direccion}}</td>
-                        <td>{{mostrar.telefono}}</td>
-                        <td class="ocultar">
-                            {% load static %}
-                            <i style="color: white;" type="button" data-toggle="modal"
-                                data-target="#editar{{mostrar.id}}"><i><img
-                                        src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
+                    
+                        {% if not mostrar.estado %}
+                            
+                            <tr class="small">
+                                <td id="select{{mostrar.id}}">{{mostrar.nombre_cliente}}</td>
+                                <td>{{mostrar.direccion}}</td>
+                                <td>{{mostrar.telefono}}</td>
+                                <td class="ocultar">
+                                    {% load static %}
+                                    <i style="color: white;" type="button" data-toggle="modal"
+                                        data-target="#editar{{mostrar.id}}"><i><img
+                                                src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
 
-                            <!-- codigo para el boton de borrar  -->
-                            <!-- -------------------------------------------- -->
-                            <!-- Button trigger modal -->
-                            <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
-                                data-target="#borrar{{mostrar.id}}">
-                                {% load static %}
-                                <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
-                            </i>
+                                    <!-- codigo para el boton de borrar  -->
+                                    <!-- -------------------------------------------- -->
+                                    <!-- Button trigger modal -->
+                                    <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
+                                        data-target="#borrar{{mostrar.id}}">
+                                        {% load static %}
+                                        <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
+                                    </i>
 
-                        </td>
+                                </td>
 
-                        <!-- modal para el boton de editar -->
+                                <!-- modal para el boton de editar -->
 
-                        <div class="modal fade" id="editar{{mostrar.id}}" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Editar Datos</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form method="POST" action="clientes">
-                                            {% csrf_token %}
-
-                                            <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Nombre del Cliente:</label>
-                                                <input name="nombre_cliente" value="{{mostrar.nombre_cliente}}" type="text"
-                                                class="form-control" id="recipient-name" required>
+                                <div class="modal fade" id="editar{{mostrar.id}}" tabindex="-1" role="dialog"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Editar Datos</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Direccion del Cliente:</label>
-                                                <input name="direccion" value="{{mostrar.direccion}}" type="text"
-                                                class="form-control" id="recipient-name" required>
+                                            <div class="modal-body">
+                                                <form method="POST" action="clientes">
+                                                    {% csrf_token %}
+
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Nombre del Cliente:</label>
+                                                        <input name="nombre_cliente" value="{{mostrar.nombre_cliente}}" type="text"
+                                                        class="form-control" id="recipient-name" required>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Direccion del Cliente:</label>
+                                                        <input name="direccion" value="{{mostrar.direccion}}" type="text"
+                                                        class="form-control" id="recipient-name" required>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="recipient-name" class="col-form-label">Telefono del Cliente:</label>
+                                                        <input name="telefono" value="{{mostrar.telefono}}" type="text"
+                                                        class="form-control" id="recipient-name" required>
+                                                    </div>
+
+
+                                                    <input type="hidden" name="iden" value="{{mostrar.id}}">
+                                                    <input type="hidden" name="editar" value="editar">
+
                                             </div>
-                                            <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Telefono del Cliente:</label>
-                                                <input name="telefono" value="{{mostrar.telefono}}" type="text"
-                                                class="form-control" id="recipient-name" required>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-outline-danger"
+                                                    data-dismiss="modal">Cancelar</button>
+                                                <button type="submit" class="btn btn-outline-success">Guardar Cambios</button>
                                             </div>
-
-
-                                            <input type="hidden" name="iden" value="{{mostrar.id}}">
-                                            <input type="hidden" name="editar" value="editar">
-
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-outline-danger"
-                                            data-dismiss="modal">Cancelar</button>
-                                        <button type="submit" class="btn btn-outline-success">Guardar Cambios</button>
-                                    </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Modal para borrar -->
-                        <div class="modal fade" id="borrar{{mostrar.id}}" tabindex="-1" role="dialog"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <form action="clientes" method="post">
-                                        {% csrf_token %}
-                                        <div class="modal-body">
-                                            <input type="hidden" name="id_borrar" value="{{mostrar.id}}">
-                                            <input type="hidden" name="borrar" value="borrar">
-                                            ¿Desea Eliminar este Registro?
+                                            </form>
                                         </div>
-                                        <div class="modal-footer">
-
-                                            <button type="button" class="btn btn-outline-warning"
-                                                data-dismiss="modal">Cancelar</button>
-                                            <button type="submit" class="btn btn-outline-danger">Borrar</button>
-                                        </div>
-                                    </form>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
 
-                    </tr>
+                                <!-- Modal para borrar -->
+                                <div class="modal fade" id="borrar{{mostrar.id}}" tabindex="-1" role="dialog"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Confirmación</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <form action="clientes" method="post">
+                                                {% csrf_token %}
+                                                <div class="modal-body">
+                                                    <input type="hidden" name="id_borrar" value="{{mostrar.id}}">
+                                                    <input type="hidden" name="borrar" value="borrar">
+                                                    ¿Desea Eliminar este Registro?
+                                                </div>
+                                                <div class="modal-footer">
+
+                                                    <button type="button" class="btn btn-outline-warning"
+                                                        data-dismiss="modal">Cancelar</button>
+                                                    <button type="submit" class="btn btn-outline-danger">Borrar</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </tr>
+
+                        {% endif %}
+                        
+
 
                     {% endfor %}
 
